feat(module): 优化聊天流程和数据检索功能
- 在 Assistant接口中添加新的 chatStream 方法，支持单个消息参数
- 实现 MyChatMemory 类，用于优化聊天记忆管理
- 添加 MyCompressingQueryTransformer 类，改进查询压缩处理
- 实现 MyContentRetriever 类，用于自定义内容检索
- 优化数据集搜索步骤，支持异步检索和多任务处理
- 改进重置问题步骤，使用新的查询转换器和聊天记忆
-调整生成人类消息步骤，移除冗余系统消息处理- 更新 FullTextIndexService，支持最小分数参数